--- a/quiz/index.html
+++ b/quiz/index.html
@@ -153,38 +153,44 @@ document.getElementById('quizForm').addEventListener('submit', function(event) {
     };
 
 let score = 0;
-for (let i = 1; i <= 13; i++) {
-    let userAnswer = "";
-    if (i === 12 || i === 13) {
-        userAnswer = document.querySelector(`select[name="q${i}"]`).value;
-    } else {
-        userAnswer = document.querySelector(`input[name="q${i}"]`).value.trim();
+    for (let i = 1; i <= 13; i++) {
+        let userAnswer = "";
+        if (i === 12 || i === 13) {
+            userAnswer = document.querySelector(`select[name="q${i}"]`).value;
+        } else {
+            userAnswer = document.querySelector(`input[name="q${i}"]`).value.trim();
+        }
+
+        const correctAnswer = answers[`q${i}`];
+
+        if (Array.isArray(correctAnswer)) {
+            if (correctAnswer.includes(userAnswer)) {
+                score++;
+            }
+        } else {
+            if (userAnswer.toLowerCase() === correctAnswer.toLowerCase()) {
+                score++;
+            }
+        }
     }
 
-    const correctAnswer = answers[`q${i}`];
+    const quizContainer = document.getElementById('quizContainer');
+    const resultContainer = document.getElementById('resultContainer');
+    const scoreText = document.getElementById('scoreText');
+    const tryAgainBtn = document.getElementById('tryAgainBtn');
 
-    if (Array.isArray(correctAnswer)) {
-        if (correctAnswer.includes(userAnswer)) {
-            score++;
-        }
-    } else {
-        if (userAnswer.toLowerCase() === correctAnswer.toLowerCase()) {
-            score++;
-        }
-    }
-}
+    quizContainer.style.display = 'none';
+    resultContainer.style.display = 'block';
+    scoreText.textContent = `Your score is: ${score}/13`;
+    tryAgainBtn.style.display = 'block';
 
-const quizContainer = document.getElementById('quizContainer');
-const resultContainer = document.getElementById('resultContainer');
-const scoreText = document.getElementById('scoreText');
-
-quizContainer.style.display = 'none';
-resultContainer.style.display = 'block';
-scoreText.textContent = `Your score is: ${score}/13`;
-
-const tryAgainBtn = document.getElementById('tryAgainBtn');
-tryAgainBtn.addEventListener('click', function() {
-    quizContainer.style.display = 'block';
-    resultContainer.style.display = 'none';
-    document.getElementById('quizForm').reset();
+    tryAgainBtn.addEventListener('click', function() {
+        quizContainer.style.display = 'block';
+        resultContainer.style.display = 'none';
+        document.getElementById('quizForm').reset();
+        tryAgainBtn.style.display = 'none';
+    });
 });
+</script>
+</body>
+</html>
