--- a/quiz/index.html
+++ b/quiz/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 
+<div id="quizContainer">
 <h2>Language Quiz</h2>
 <form id="quizForm">
     <ol>
@@ -131,6 +132,13 @@
     </ol>
     <button type="submit">Submit Answers</button>
 </form>
+</div>
+    
+<div id="resultContainer" style="display: none;">
+    <h2>Quiz Result</h2>
+    <p id="scoreText"></p>
+    <button id="tryAgainBtn">Try Again</button>
+</div>
 
 <script>
 document.getElementById('quizForm').addEventListener('submit', function(event) {
@@ -175,11 +183,12 @@ let score = 0;
     }
 
     const quizContainer = document.getElementById('quizContainer');
+    quizContainer.style.display = 'none';
+
     const resultContainer = document.getElementById('resultContainer');
     const scoreText = document.getElementById('scoreText');
     const tryAgainBtn = document.getElementById('tryAgainBtn');
 
-    quizContainer.style.display = 'none';
     resultContainer.style.display = 'block';
     scoreText.textContent = `Your score is: ${score}/13`;
     tryAgainBtn.style.display = 'block';
@@ -191,6 +200,7 @@ let score = 0;
         tryAgainBtn.style.display = 'none';
     });
 });
+</script>
 </script>
 </body>
 </html>
