--- a/fakipedia/index.html
+++ b/fakipedia/index.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 <html>
 <head> 
-<title> Wikipedia </title>
+<title> Fakipedia </title>
 <style>
 body {
 background-color: floralwhite;
@@ -20,7 +19,7 @@ font-family: arial;
 font-family: garamond;
 text-align: center;
 background-color: lightblue;
-margin: 5%;
+margin: 0%;
 }
 
 .left {
@@ -34,37 +33,63 @@ background-color: lightgray;
 float: right;
 width: 75%;
 text-align: left;
+font-family: arial;
+color: darkslategray;
 }
 
-.image {
-background-color: lightblue;
+.imageright {
 float: right;
-width: 33%;
+width: 25%;
 margin: 5%;
+background-color: lightblue;
 }
+
+.imageleft {
+float: left;
+width: 25%;
+margin: 5%;
+background-color: lightblue;
+}
+
+h3 {
+color: black;
+font-family: garamond;
+}
+
+
+
 </style>
 <body>
 <div class="top">
 <h1><i> Fakipedia </i></h1>
+</div>
 <div class="wikiarticle">
 <h1><i> Brown v. Board of Education </i></h1>
-<h6> From Fakipedia, the fake Encyclopedia. For Ms. Battaglia's 8tth Grade Social Studies Class </h6>
-<div class="image">
-<img src="https://cdn.britannica.com/25/91825-050-6828171F/George-EC-Hayes-Thurgood-Marshall-court-James-May-17-1954.jpg" alt="Girl in a jacket" width=100% height=100%>
+<h6> From Fakipedia, the fake Encyclopedia. For Ms. Battaglia's 8th Grade Social Studies Class </h6>
+<div class="imageright">
+<img src="https://cdn.britannica.com/25/91825-050-6828171F/George-EC-Hayes-Thurgood-Marshall-court-James-May-17-1954.jpg" alt="Brown v. Board" width=100%>
 <h6> Brown after settling the case </h6>
 </div>
 <br>
-<h4>  The brown v board of education case blah blah blah this is to test the image wrapping </h4>
-<h4>  The brown v board of education case blah blah blah this is to test the image wrapping </h4>
-<h4>  The brown v board of education case blah blah blah this is to test the image wrapping </h4>
-<h4>  The brown v board of education case blah blah blah this is to test the image wrapping </h4>
-<h4>  The brown v board of education case blah blah blah this is to test the image wrapping </h4>
-<h4>  The brown v board of education case blah blah blah this is to test the image wrapping </h4>
-<h4>  The brown v board of education case blah blah blah this is to test the image wrapping </h4>
-<h4>  The brown v board of education case blah blah blah this is to test the image wrapping </h4>
-<h4>  The brown v board of education case blah blah blah this is to test the image wrapping </h4>
-<h4>  The brown v board of education case blah blah blah this is to test the image wrapping </h4>
-<h4>  The brown v board of education case blah blah blah this is to test the image wrapping </h4>
+<h3>  <i> Background </i></h3>
+<h5>  The <i> Brown v. Board of Education </i> is piggybacking off of the ruling of the <i> 1896 </i> case, <i> Plessy v. Ferguson. </i> This case ruled that as long as two facilities are the exact same, then people can be split among those areas based on race, a form of <i> segregation.</i>  In this 1896 case, it was ruled that this wasn't a violation of the <i>14th amendment.</i> The 14th amendment states that, <i>"No state shall . . . deprive anyone of life, liberty, or property."</i> This court case started the <i>"separate but equal"</i> mentality in the United States.</h5>
+<br>
+<h3> <i> Case Before Supreme Court </i> </h3>
+<h5> In 1951, Plaintiff<i> Oliver Brown's </i> daughter was denied access to <i> Topeka Kansas' </i> public schools. Because he deemed this unconstitutional, he started a class action lawsuit against the <i> Topeka Kansas Board of Education. </i> He also decided to start the case when his friend's daughter, <i> Linda Brown </i> had to walk 6 blocks to a <i> bus stop </i> for her to go to her school, while there was another school just 7 blocks away.</h5> 
+<br>
+<div class="imageleft">
+<img src="https://www.archives.gov/files/publications/prologue/images/spring-2004-state-journal-clipping.jpg" alt="Brown v. Board" width=100%>
+<h6> Newspaper informing of the banning of school segregation. </h6>
+</div>
+<h3> <i> Full Case </i> </h3>
+<h5> The problem with the court case only being at district level is that the state of Kansas, and other states had laws that required segregation in schools to be present. Some of these states and districts include but are not limited to, <i> Virginia, Delaware, Washington DC, Oklahoma, South Carolina, and Florida. </i> In 1953 a verdict was released that this racial segregation was indeed a violation of the 14th amendment.</h5>
+<br>
+<h3> <i> Brown v. Board of Education II </i> </h3>
+<h5> After the court case was settled, the <i> Supreme Court </i> still needed a way for them to enforce the changing of the laws. They decided to reinstate the court case again just to enforce the laws of what was decided during the court case. This part of the court case was quite civil and only done to decide the outcome of what should happen in the states where this is occuring, and what punishment should occur if this were to happen.</h5>
+<br>
+<h3> Aftermath </h3>
+<h5> Even though this court case was a huge stepping stone allowing more rights for people and allowing <i> civil rights </i> to flourish in the United States, many people were still mad that they were unable to segregate people in this way based on race. In a Tallahassee newspaper, an anonymous person said, <i>"[The ruling of the court case was] a day of catastrophe—a Black Monday—a day something like Pearl Harbor."</i> Even though that many people were still mad at what was happening, it still was a major help to getting to acts like the <i> Civil Rights Act of 1964. </i> If this case were not to have happened, there is a good chance that people would still be segregated in public spaces and schools to do this day based off of ethnic factors.</h5>
+
 </div>
 <div class="left">
 <h4> Home </h4>
