--- a/fakipedia/index.html
+++ b/fakipedia/index.html
@@ -87,7 +87,7 @@ font-family: garamond;
 <h3> <i> Brown v. Board of Education II </i> </h3>
 <h5> After the court case was settled, the <i> Supreme Court </i> still needed a way for them to enforce the changing of the laws. They decided to reinstate the court case again just to enforce the laws of what was decided during the court case. This part of the court case was quite civil and only done to decide the outcome of what should happen in the states where this is occuring, and what punishment should occur if this were to happen.</h5>
 <br>
-<h3> Aftermath </h3>
+<h3> <i> Aftermath </i> </h3>
 <h5> Even though this court case was a huge stepping stone allowing more rights for people and allowing <i> civil rights </i> to flourish in the United States, many people were still mad that they were unable to segregate people in this way based on race. In a Tallahassee newspaper, an anonymous person said, <i>"[The ruling of the court case was] a day of catastrophe—a Black Monday—a day something like Pearl Harbor."</i> Even though that many people were still mad at what was happening, it still was a major help to getting to acts like the <i> Civil Rights Act of 1964. </i> If this case were not to have happened, there is a good chance that people would still be segregated in public spaces and schools to do this day based off of ethnic factors.</h5>
 
 </div>
