--- a/quiz/index.html
+++ b/quiz/index.html
@@ -4,7 +4,7 @@
     <title>Bab Quiz</title>
     <style>
 body {
-background-color: lightblue;
+background-image: url("book_cover_front.jpg");
 font-family: Helvetica;
 }
 
@@ -23,7 +23,7 @@ margin-top: 0;
 border: 2px solid black;
 padding: 5px;
 height: 70px;
-background: lightgrey;
+background: yellow;
 color: black;
 text-align: center;
 border-radius: 10px;
