--- a/quiz/index.html
+++ b/quiz/index.html
@@ -4,7 +4,7 @@
     <title>Bab Quiz</title>
     <style>
 body {
-background-image: url("book_cover_front.jpg");
+background-image: url("wall_of_bab.jpg");
 font-family: Helvetica;
 }
 
