--- a/quiz/index.html
+++ b/quiz/index.html
@@ -16,7 +16,7 @@ margin: auto;
 padding: 10px;
 background-color: white;
 border-radius: 10px;
-box-shadow: 10px 10px 5px grey;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #header {
