--- a/quiz/index.html
+++ b/quiz/index.html
@@ -16,7 +16,7 @@ margin: auto;
 padding: 10px;
 background-color: white;
 border-radius: 10px;
-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #header {
@@ -24,7 +24,7 @@ margin-top: 0;
 border: 2px solid black;
 padding: 5px;
 height: 70px;
-background: yellow;
+background: rgb(231, 182, 19);
 color: black;
 text-align: center;
 border-radius: 10px;
