--- a/unicode/index.html
+++ b/unicode/index.html
@@ -8,7 +8,7 @@
     body {
         font-family: Arial, sans-serif;
         margin: 20px;
-        background-image: url("8-word-language.org/quiz/sectioned-wall-of-bab.jpg");
+        background-image: url("https://8-word-language.org/quiz/sectioned-wall-of-bab.jpg");
     }
 
     #main {
