--- a/index.html
+++ b/index.html
@@ -1,3 +1,67 @@
-test
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Bab Quiz</title>
+    <style>
+body {
+background-image: url("sectioned-wall-of-bab.jpg");
+font-family: Helvetica;
+}
 
-test do it work
+#main {
+width: 80%;
+max-width: 950px;
+border: 1px gray solid;
+margin: auto;
+padding: 10px;
+background-color: white;
+border-radius: 10px;
+box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#header {
+margin-top: 0;
+border: 2px solid black;
+padding: 5px;
+height: 70px;
+background: rgb(231, 182, 19);
+color: black;
+text-align: center;
+border-radius: 10px;
+}
+
+label {
+display: block;
+}
+
+input {
+width: 300px;
+margin-left: 0px;
+}
+
+input[type="radio"] {
+width: 50px;
+}
+
+#input1 {
+width: 100px;
+margin-left: 0px;
+}
+
+
+button {
+width: 150px;
+margin-top: 20px;
+background: lightgrey;
+border-radius: 10px;
+}
+</style>
+</head>
+<body>
+<div id="main">
+<div id="header">
+<h2>Bab: The 8 Word Language     abab .bab.</h2>
+</div>
+<h3>AAAAAA</h3>
+    </body>
+    </html>
