--- a/index.html
+++ b/index.html
@@ -34,34 +34,72 @@ label {
 display: block;
 }
 
-input {
-width: 300px;
-margin-left: 0px;
-}
 
-input[type="radio"] {
-width: 50px;
-}
-
-#input1 {
-width: 100px;
-margin-left: 0px;
-}
-
-
-button {
-width: 150px;
-margin-top: 20px;
-background: lightgrey;
+#left {
+float: left;
+padding: 20px;
 border-radius: 10px;
+width: 40%;
+height: 70px;
+background: rgb(231, 182, 19);
+color: black;
+border: 2px solid black;
+margin-top: 0;
 }
+
+#right {
+float: right;
+padding: 20px;
+border-radius: 10px;
+width: 40%;
+height: 70px;
+background: rgb(231, 182, 19);
+color: black;
+border: 2px solid black;
+margin-top: 0;
+}
+
+#wordle {
+margin-top: 0;
+border: 2px solid black;
+padding: 5px;
+height: 70px;
+background: rgb(231, 182, 19);
+color: black;
+text-align: center;
+border-radius: 10px;}
+
+#common {
+margin-top: 0;
+border: 2px solid black;
+padding: 5px;
+height: 70px;
+background: rgb(231, 182, 19);
+color: black;
+text-align: center;
+border-radius: 10px;}
 </style>
 </head>
 <body>
 <div id="main">
 <div id="header">
-<h2>Bab: The 8 Word Language     abab .bab.</h2>
-</div>
+<h2>Bab: The 8 Word Language ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ abab .bab.</h2>
+</div> 
 <h3>AAAAAA</h3>
+<div id="left">
+	<h3> left </h3>
+    </div>
+   <div id="right">
+   <h3> right </h3>
+   </div>
+<h1>‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ </h1>
+<div id="wordle">
+<h3> wordle </h3>
+</div>
+<h6></h6>
+<div id="common">
+<h3> common </h3>
+</div>
+   </div>
     </body>
     </html>
